Pääsin tekemään navigointi baaria

--- a/Web-Kurssi1/Tehtävä - Taulukko - 1.html
+++ b/Web-Kurssi1/Tehtävä - Taulukko - 1.html
@@ -4,27 +4,22 @@
 </head>
 <style>
 table {
-      border-collapse: dotted;
+      border: dotted;
       width: 30%;
       margin: auto;
+      border-width: 1px;
     }
 
     th, td {
-      border: 1px dotted;
-      padding: 8px;
-      text-align: left;
-      width: 100px;
-      height: 10px;
-    }
-    p {
-      text-align: center; 
+      
+      border-style: dotted;
+      border-width: 1px;
     }
 
 </style>
 <body>
-<p>Keskilämpötilat suomessa 1981-2010 (Milo Niirnaen)</p>
-
   <table>
+    <caption>Keskilämpötilat Suomessa 1981-2010 (tekijä: Milo Niiranen)</caption>
     <tr>
       <th><center>Kuukausi</center></th>
       <th><center>lämpötila</center></th>
