--- a/Web-Kurssi1/Tehtävä - Navigointivalikko - 1.html
+++ b/Web-Kurssi1/Tehtävä - Navigointivalikko - 1.html
@@ -25,13 +25,50 @@
         background-color: #555;
     }
 
+    .dropdown{
+        position: relative;
+        display: inline-block;
+    }
+
+    .dropdown-content{
+        display: none;
+        position: absolute;
+        background-color:rgba(0,0,0,0.2);;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        color: white;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    .dropdown-content a:hover{
+        background-color: #555;
+    }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+  
+
 </style>
 </head>
 <body>
     <ul>
-        <li><a href="home">Pääsivu</a></li>
-        <li><a href="table">Taulukko sivu</a></li>
-        <li><a href="other">Ulkupuoliset sivut</a></li>
+        <li><a href="#">Pääsivu</a></li>
+        <li><a href="#">Taulukko sivu</a></li>
+
+        <li class="dropdown">
+            <a href="#">Ulkupuoliset sivut</a>
+            <div class="dropdown-content">
+                <a href="#">Kaupungit</a>
+                <a href="#">Avaruus</a>
+            </div>
+        </li>
     </ul>
+</ul>
 </body>
 </html>
