--- a/Web-Kurssi1/Tehtävä - Responsiivinen sivu - 1.html
+++ b/Web-Kurssi1/Tehtävä - Responsiivinen sivu - 1.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
 <title>HTML5</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-
+  
 body {
   font-family: Verdana,sans-serif;
   font-size: 0.9em;
-  background-color: rgb(234, 223, 223);
+  background-color: rgb(230, 222, 222);
   margin: 0;
-}
-
-@media screen and (max-width: 600px){
-    div.body{
-        display: none;
-    }
 }
 
 header, footer {
@@ -25,32 +20,46 @@ header, footer {
 }
 
 section {
-  margin-left: 160px;
-  padding: 10px;
-  background-color: lightgrey;
-  position: relative;
-  bottom: 50px;
+  margin: 5px;
+  padding: 15px;
+  background-color: rgb(175, 173, 173);
 }
 
 article {
-  margin: 20px;
+  margin: 15px;
   padding: 10px;
   background-color: white;
 }
 
+
+
 nav ul {
   padding: 0;
-  position: relative;
-  top: 30px;
-
 }
 
 nav ul li {
-  display: block;
+  display: inline;
   margin: 5px;
-  position: relative;
-  left: 35px;
 }
+
+@media screen and (min-width: 1200px) {
+  body {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 1199px) and (min-width: 768px) {
+  body {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  body {
+    margin: 0;
+  }
+}
+
 </style>
 </head>
 <body>
