Lomake ja yrityksen sivu

--- a/Web-Kurssi1/Javascript WO1/Tehtävä - Ohjausrakenne - 3.html
+++ b/Web-Kurssi1/Javascript WO1/Tehtävä - Ohjausrakenne - 3.html
@@ -21,17 +21,17 @@
         alert("Jo joutui armas aika ja suvi suloinen.")
     }
 
-    else if(paistaako == "kyllä" && sataako == "kyllä" && lampotila == "ei")
+    else if(paistaako == "kyllä" && sataako == "kyllä" && lämpötila == "ei")
     {
         alert("Kevät saapui, aurinko paistaa ja vettä sataa.")
     }
 
-    else if(paistaako == "kyllä" && sataako == "ei" && lampotila == "ei")
+    else if(paistaako == "kyllä" && sataako == "ei" && lämpötila == "ei")
     {
         alert("Hyvää talvipäivää, aurinko paistaa ja pakkanen kirpeä.")
     }
 
-    else if(paistaako == "ei" && sataako == "ei" && lampotila == "ei")
+    else if(paistaako == "ei" && sataako == "ei" && lämpötila == "ei")
     {
         alert("Pimeä ja kylmä yö, tähdet tuikkivat taivaalla.")
     }
